--- a/less/partners.less
+++ b/less/partners.less
@@ -13,19 +13,19 @@
 	&__wrapper {
 		width: 1200px;
 		margin: 0 auto;
-		padding: 180px 0;
-		background-image: url('../img/partners.png');
-		background-size: 100% auto;
-		background-position: center;
+		padding: 40px 0;
 
 		@media @tablet {
 			width: 768px;
-			padding: 100px 0;
 		}
 
 		@media @mobile {
 			.mobile-wrap;
-			padding: 60px 0;
+			padding: 20px 0;
+		}
+		
+		img {
+			width: 100%;
 		}
 	}
 }
