--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -33,6 +33,24 @@
 			background-color: #67b37c;
 		}
 	}
+
+	&__more-button {
+		display: block;
+		margin: 0 auto;
+		padding: 20px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		border: 2px solid #6ab980;
+		background-color: transparent;
+		font-family: SFUIBold;
+		font-size: 16px;
+		transition: 0.1s;
+		cursor: pointer;
+
+		&:hover {
+			background-color: #65ad79;
+		}
+	}
 }
 
 .games-preview {
