--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ button {
   outline: none;
 }
 form * {
+  -webkit-appearance: none;
   outline: none;
 }
 .clearfix {
@@ -118,7 +119,7 @@ form * {
   position: absolute;
   z-index: 100;
   right: 0;
-  width: 100%;
+  width: calc(100% - 50px);
   background-color: #fff;
   background-image: none;
 }
@@ -158,7 +159,6 @@ form * {
 }
 .main-nav__dropdown-item a {
   display: block;
-  width: 200px;
   padding: 20px;
   background-color: #313131;
 }
@@ -498,6 +498,22 @@ form * {
 .popular-games__button:hover {
   background-color: #67b37c;
 }
+.popular-games__more-button {
+  display: block;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #6ab980;
+  background-color: transparent;
+  font-family: SFUIBold;
+  font-size: 16px;
+  transition: 0.1s;
+  cursor: pointer;
+}
+.popular-games__more-button:hover {
+  background-color: #65ad79;
+}
 .games-preview {
   display: flex;
   justify-content: space-between;
@@ -611,10 +627,10 @@ form * {
 .partners__wrapper {
   width: 1200px;
   margin: 0 auto;
-  padding: 180px 0;
-  background-image: url('../img/partners.png');
-  background-size: 100% auto;
-  background-position: center;
+  padding: 40px 0;
+}
+.partners__wrapper img {
+  width: 100%;
 }
 .footer__wrapper {
   display: flex;
@@ -1369,7 +1385,7 @@ form * {
   .main-nav__menu-line {
     width: 40px;
     height: 5px;
-    margin-bottom: 11px;
+    margin-bottom: 12px;
     background-color: #fff;
   }
   .main-nav__logo {
@@ -1380,8 +1396,7 @@ form * {
     left: 0;
     top: -500px;
     z-index: 11;
-    width: 200px;
-    height: 300px;
+    width: 150px;
     padding: 0;
     border: 1px solid #000;
     background-color: #161616;
@@ -1392,18 +1407,18 @@ form * {
   }
   .main-nav__item {
     display: block;
-    width: 100%;
+    width: 150px;
     margin-right: 0;
     text-align: center;
   }
   .main-nav__item a {
     display: block;
-    width: 200px;
+    width: 150px;
     padding: 20px 0;
   }
   .main-nav__dropdown {
     top: 0;
-    left: 199px;
+    left: 149px;
   }
   .main-nav__item--arrow::after {
     right: 20px;
@@ -1483,7 +1498,6 @@ form * {
   }
   .partners__wrapper {
     width: 768px;
-    padding: 100px 0;
   }
   .footer__wrapper {
     width: 768px;
@@ -1586,6 +1600,7 @@ form * {
   }
   .main-nav__list {
     left: -10px;
+    width: 150px;
   }
   .main-nav__list--show {
     top: 50px;
@@ -1599,7 +1614,7 @@ form * {
     padding-left: 10px;
   }
   .slide__text {
-    transform: translatey(100%);
+    transform: translatey(110%);
   }
   .slide__upper-text {
     margin-bottom: 10px;
@@ -1610,7 +1625,7 @@ form * {
     font-size: 20px;
   }
   .slide__button {
-    padding: 10px 15px;
+    padding: 8px 10px;
   }
   .tabs::after {
     display: none;
@@ -1732,7 +1747,7 @@ form * {
     width: 100%;
     padding-right: 10px;
     padding-left: 10px;
-    padding: 60px 0;
+    padding: 20px 0;
   }
   .footer__wrapper {
     width: 100%;
@@ -1751,10 +1766,10 @@ form * {
     width: 100%;
   }
   .fixed-bar__wrapper {
-    flex-direction: column;
+    justify-content: space-between;
   }
   .fixed-bar__hider {
-    width: 100%;
+    order: 3;
   }
   .fixed-bar__hider::before {
     top: 25px;
@@ -1788,7 +1803,7 @@ form * {
     display: none;
   }
   .fixed-bar__chat {
-    order: 3;
+    order: 1;
   }
   .fixed-bar__chat::after {
     display: none;
@@ -1797,7 +1812,7 @@ form * {
     background-color: transparent;
   }
   .fixed-bar__language {
-    order: 4;
+    order: 2;
   }
   .fixed-bar__language:hover {
     background-color: transparent;
@@ -1855,7 +1870,7 @@ form * {
     padding-left: 10px;
   }
   .blog-slider__text-wrapper {
-    transform: translatey(100%);
+    transform: translatey(120%);
   }
   .blog-slider__header {
     margin-bottom: 10px;
