--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -14,7 +14,7 @@
 		width: 100%;
 
 		@media @mobile {
-			flex-direction: column;
+			justify-content: space-between;
 		}
 	}
 
@@ -59,7 +59,7 @@
 		}
 
 		@media @mobile {
-			width: 100%;
+			order: 3;
 
 			&::before {
 				top: 25px;
@@ -196,7 +196,7 @@
 		}
 
 		@media @mobile {
-			order: 3;
+			order: 1;
 
 			&::after {
 				display: none;
@@ -236,7 +236,7 @@
 		}
 
 		@media @mobile {
-			order: 4;
+			order: 2;
 
 			&:hover {
 				background-color: transparent;
@@ -352,8 +352,6 @@
 	flex-grow: 1;
 
 	@media @mobile {
-		// width: 100%;
-		// order: 1;
 		display: none;	
 	}
 
