--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -2,7 +2,7 @@
 	position: fixed;
 	z-index: 20;
 	right: 0;
-	bottom: 0;
+	bottom: -1px;
 	width: 100%;
 	background-color: #313131;
 	transition: 0.3s;
@@ -347,6 +347,7 @@
 }
 
 .search {
+	position: relative;
 	height: 50px;
 	margin-left: 1px;
 	flex-grow: 1;
@@ -383,6 +384,53 @@
 
 			&::placeholder {
 				text-align: center;
+			}
+		}
+	}
+
+	&__close {
+		position: absolute;
+		right: 0;
+		top: 0;
+		display: none;
+		width: 50px;
+		height: 50px;
+		background-color: #414141;
+		cursor: pointer;
+		transition: 0.1s;
+
+		&::before {
+			content: '';
+			position: absolute;
+			right: 23px;
+			top: 15px;
+			width: 2px;
+			height: 20px;
+			background-color: #666666;
+			transform: rotate(45deg);
+			transition: 0.1s;
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			right: 23px;
+			top: 15px;
+			width: 2px;
+			height: 20px;
+			background-color: #666666;
+			transform: rotate(135deg);
+			transition: 0.1s;
+		}
+
+		&:hover {
+
+			&::before {
+				background-color: #fff;
+			}
+
+			&::after {
+				background-color: #fff;
 			}
 		}
 	}
