--- a/less/tabs.less
+++ b/less/tabs.less
@@ -30,14 +30,18 @@
 		}
 	}
 
-	&__selector {
+	&__select {
 		position: relative;
 		padding-top: 28px;
 		padding-right: 100px;
 		padding-bottom: 25px;
 		padding-left: 10px;
+		border: none;
+		background-color: transparent;
 		font-size: 14px;
+		color: #fff;
 		cursor: pointer;
+		outline: none;
 
 		&::after {
 			content: '';
