--- a/less/header.less
+++ b/less/header.less
@@ -169,11 +169,45 @@
 
 		&:focus {
 			position: absolute;
-			z-index: 100;
+			z-index: 20;
 			right: 0;
 			width: ~"calc(100% - 50px)";
 			background-color: #fff;
 			background-image: none;
+		}
+	}
+
+	&__search-close {
+		position: absolute;
+		z-index: 21;
+		top: 0;
+		right: 0;
+		display: none;
+		width: 40px;
+		height: 40px;
+		background-color: #fff;
+		cursor: pointer;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 7px;
+			right: 18px;
+			width: 2px;
+			height: 25px;
+			background-color: #666666;
+			transform: rotate(45deg);
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 7px;
+			right: 18px;
+			width: 2px;
+			height: 25px;
+			background-color: #666666;
+			transform: rotate(-45deg);
 		}
 	}
 
@@ -249,7 +283,7 @@
 	&__dropdown {
 		position: absolute;
 		z-index: 11;
-		top: 50px;
+		top: 49px;
 		list-style: none;
 		transition: 0.1s;
 
@@ -275,7 +309,7 @@
 
 		a {
 			display: block;
-			// width: 150px;
+			width: 150px;
 			padding: 20px;
 			background-color: #313131;
 
