good magnifier image in mobile header

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ form * {
   border: none;
   background-color: transparent;
   transition: 0.3s;
-  background-image: url('../img/magnifier.png');
+  background-image: url('../img/magnifier-big.png');
   background-size: 100%;
 }
 .main-nav__search-field:focus {
