--- a/less/header.less
+++ b/less/header.less
@@ -164,7 +164,7 @@
 		border: none;
 		background-color: transparent;
 		transition: 0.3s;
-		background-image: url('../img/magnifier.png');
+		background-image: url('../img/magnifier-big.png');
 		background-size: 100%;
 
 		&:focus {
