--- a/less/tabs.less
+++ b/less/tabs.less
@@ -30,18 +30,8 @@
 		}
 	}
 
-	&__select {
+	&__select-form {
 		position: relative;
-		padding-top: 28px;
-		padding-right: 100px;
-		padding-bottom: 25px;
-		padding-left: 10px;
-		border: none;
-		background-color: transparent;
-		font-size: 14px;
-		color: #fff;
-		cursor: pointer;
-		outline: none;
 
 		&::after {
 			content: '';
@@ -65,8 +55,29 @@
 				border-bottom: 2px solid #fff;
 			}
 		}
+	}
 
-		@media @mobile {
+	&__select {
+		position: relative;
+		padding-top: 28px;
+		padding-right: 100px;
+		padding-bottom: 25px;
+		padding-left: 10px;
+		border: none;
+		background-color: #232323;
+		font-family: SFUIMedium;
+		font-size: 14px;
+		color: #fff;
+		cursor: pointer;
+		outline: none;
+
+		@media @tablet {
+			width: 100%;
+		}
+	}
+
+	@media @tablet {
+		&__select-form {
 			width: 100%;
 		}
 	}
@@ -98,9 +109,8 @@
 			}
 		}
 
-		@media @mobile {
+		@media @tablet {
 			display: none;
-			// width: 100%;
 		}
 	}
 
