--- a/less/advantages.less
+++ b/less/advantages.less
@@ -53,12 +53,13 @@
 	}
 
 	&__image {
-		width: 208px;
-		height: 208px;
+		width: 160px;
+		height: 170px;
 		margin: 0 auto;
 		margin-top: 20px;
 		margin-bottom: 60px;
 		background-size: 100%;
+		background-position: center;
 
 		@media @tablet {
 			margin-bottom: 40px;
