--- a/less/header.less
+++ b/less/header.less
@@ -62,6 +62,7 @@
 	@media @tablet {
 
 		&__menu-button {
+			position: relative;
 			width: 40px;
 			height: 40px;
 			cursor: pointer;
@@ -72,6 +73,29 @@
 			height: 5px;
 			margin-bottom: 12px;
 			background-color: #fff;
+			transition: 0.3s;
+		}
+
+		&__menu-line--hidden {
+			margin-top: 17px;
+			opacity: 0;
+			transition: 0.3s;
+		}
+
+		&__menu-line--first {
+			position: absolute;
+			left: 0px;
+			top: 17px;
+			transform: rotate(45deg);
+			transition: 0.3s;
+		}
+
+		&__menu-line--third {
+			position: absolute;
+			left: 0px;
+			top: 17px;
+			transform: rotate(-45deg);
+			transition: 0.3s;
 		}
 	}
 
@@ -128,37 +152,8 @@
 		}
 	}
 
-	// &__magnifier {
-	// 	position: absolute;
-	// 	z-index: 0;
-	// 	width: 40px;
-	// 	height: 40px;
-
-	// 	&::before {
-	// 		content: '';
-	// 		position: absolute;
-	// 		left: 0;
-	// 		top: 0;
-	// 		width: 25px;
-	// 		height: 25px;
-	// 		border: 2px solid #fff;
-	// 		border-radius: 50%
-	// 	}
-
-	// 	&::after {
-	// 		content: '';
-	// 		position: absolute;
-	// 		right: 10px;
-	// 		bottom: 2px;
-	// 		width: 2px;
-	// 		height: 15px;
-	// 		background-color: #fff;
-	// 		transform: rotate(-45deg); 
-	// 	}
-	// }
-
 	&__search-field {
-		display: block;
+		display: block; 
 		height: 40px;
 		width: 40px;
 		border: none;
@@ -224,7 +219,6 @@
 			top: -500px;
 			z-index: 11;
 			width: 150px;
-			// height: 300px;
 			padding: 0;
 			border: 1px solid #000;
 			background-color: #161616;
@@ -253,19 +247,6 @@
 		position: relative;
 		display: inline-block;
 
-		a {
-			padding-top: 30px;
-			padding-bottom: 30px;
-			padding-left: 22px;
-			padding-right: 22px;
-			transition: 0.1s;
-
-			&:hover {
-				background-color: #ED383F;
-			}
-
-		}
-
 		@media @tablet {
 			display: block;
 			width: 150px;
@@ -277,6 +258,31 @@
 				width: 150px;
 				padding: 20px 0;
 			}
+		}
+
+		a {
+			padding-top: 30px;
+			padding-bottom: 30px;
+			padding-left: 22px;
+			padding-right: 22px;
+			transition: 0.1s;
+
+			&:hover {
+				background-color: #ED383F;
+			}
+		}
+
+		span {
+			padding-top: 30px;
+			padding-bottom: 30px;
+			padding-left: 22px;
+			padding-right: 22px;
+			transition: 0.1s;
+			cursor: pointer;
+
+			&:hover {
+				background-color: #ED383F;
+			}			
 		}
 	}
 
