--- a/less/header.less
+++ b/less/header.less
@@ -282,8 +282,14 @@
 
 			&:hover {
 				background-color: #ED383F;
-			}			
-		}
+			}
+
+			@media @tablet {
+				display: block;
+				padding-top: 20px;
+				padding-bottom: 20px;
+			}
+		}			
 	}
 
 	&__dropdown {
