--- a/less/partner.less
+++ b/less/partner.less
@@ -2,13 +2,13 @@
 
 	&__wrapper {
 		position: relative;
-		width: 1200px;
+		width: 1180px;
 		margin: 0 auto;
 		padding-top: 130px;
 		padding-bottom: 250px;
 
 		@media @tablet {
-			width: 768px;
+			width: 748px;
 		}
 
 		@media @mobile {
@@ -23,22 +23,31 @@
 		position: relative;
 		width: 690px;
 
-		&::after {
-			content: '';
-			position: absolute;
-			z-index: -1;
-			top: 0;
-			right: 0;
-			width: 245px;
-			height: 70px;
-			background-color: #6ab980;
-		}
-
 		@media @mobile {
 			width: 100%;
+		}
+
+		span {
+			position: relative;
+			display: inline-block;
 
 			&::after {
-				display: none;
+				content: '';
+				position: absolute;
+				z-index: -1;
+				top: -5px;
+				right: -10px;
+				width: ~"calc(100% + 25px)";
+				height: 70px;
+				background-color: #6ab980;
+			}
+
+			@media @mobile {
+
+				&::after {
+					width: ~"calc(100% + 20px)";
+					height: 50px;
+				}
 			}
 		}
 	}
