--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,17 @@ form * {
 .hidden {
   display: none;
 }
+#preloader {
+  display: block;
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000 url(http://hello-site.ru//main/images/preloads/circles.svg) center center no-repeat;
+  background-size: 41px;
+}
 .header {
   background-color: #161616;
 }
@@ -281,31 +292,38 @@ form * {
 }
 .tabs__select-form {
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
 }
 .tabs__select-form::after {
   content: '';
   position: absolute;
   top: 25px;
   right: 10px;
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
   border-right: 2px solid #858585;
   border-bottom: 2px solid #858585;
   transform: rotate(45deg);
   transition: 0.1s;
 }
 .tabs__select-form:hover {
-  background-color: #ed383f;
   transition: 0.1s;
 }
 .tabs__select-form:hover::after {
   border-right: 2px solid #fff;
   border-bottom: 2px solid #fff;
 }
+.tabs__provider {
+  font-family: SFUIMedium;
+  font-size: 14px;
+}
 .tabs__select {
   position: relative;
   padding-top: 28px;
-  padding-right: 100px;
+  padding-right: 35px;
   padding-bottom: 25px;
   padding-left: 10px;
   border: none;
@@ -315,6 +333,10 @@ form * {
   color: #fff;
   cursor: pointer;
   outline: none;
+}
+.tabs__select:hover {
+  background-color: #ed383f;
+  transition: 0.1s;
 }
 .switchers {
   position: relative;
@@ -999,7 +1021,7 @@ form * {
   content: '';
   position: absolute;
   right: 23px;
-  top: 15px;
+  top: 14px;
   width: 2px;
   height: 20px;
   background-color: #666666;
@@ -1634,9 +1656,6 @@ form * {
   .tabs__wrapper {
     width: 748px;
   }
-  .tabs__select {
-    width: 100%;
-  }
   .tabs__select-form {
     width: 100%;
   }
@@ -1812,6 +1831,9 @@ form * {
   }
   .main-nav__dropdown {
     top: -1px;
+  }
+  .slide__image {
+    width: 100%;
   }
   .slide__wrapper {
     width: 100%;
