--- a/less/main.less
+++ b/less/main.less
@@ -37,3 +37,15 @@ form * {
 .hidden {
 	display: none;
 }
+
+#preloader {
+	display: block;
+	position: fixed;
+	z-index: 99999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000 url(http://hello-site.ru//main/images/preloads/circles.svg) center center no-repeat;
+	background-size: 41px;
+}
