--- a/less/style.less
+++ b/less/style.less
@@ -18,3 +18,5 @@
 @import "advantages.less";
 @import "incomes.less";
 @import "prize.less";
+@import "modal-registration.less";
+@import "modal-enter.less";
