--- a/less/fixed-bar.less
+++ b/less/fixed-bar.less
@@ -390,14 +390,15 @@
 
 	&__close {
 		position: absolute;
+		z-index: -1;
 		right: 0;
 		top: 0;
-		display: none;
 		width: 50px;
 		height: 50px;
 		background-color: #414141;
 		cursor: pointer;
 		transition: 0.1s;
+		opacity: 0;
 
 		&::before {
 			content: '';
